Update NgrokInstallerTest.java